# ETF_Tracker

./: .gitignore  CLAUDE.md  Makefile  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: daily-collect.yml
data/: data_0303_20260319.csv  data_0318_20260319.xlsx  etf_analyzer_seed.duckdb  us_stock_etf.xlsx
docs/superpowers/plans/: 2026-03-18-etf-flow-tracker.md
docs/superpowers/specs/: 2026-03-18-etf-flow-tracker-design.md
etf_analyzer/: cli.py  config.py  notifier.py
etf_analyzer/analyzer/: conviction.py  flow.py  ranking.py
etf_analyzer/collector/: kis.py  krx.py  models.py
etf_analyzer/storage/: db.py  repository.py  schema.py
scripts/: daily_collect.sh  fix_sitecustomize.py
tests/: conftest.py  test_config.py  test_integration.py
tests/fixtures/: krx_flow.json  krx_holdings.json
tests/test_analyzer/: test_conviction.py  test_flow.py  test_ranking.py
tests/test_collector/: test_krx.py  test_models.py
tests/test_storage/: test_repository.py  test_schema.py
