[project]
name = "etf-analyzer"
version = "0.1.0"
description = "Korean ETF flow tracking system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "duckdb",
    "pydantic",
    "typer",
    "rich",
    "requests>=2.32.5",
    "pykrx>=1.2.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
etf-analyzer = "etf_analyzer.cli:app"

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
